# auto-request

./: Cargo.toml
src/: error.rs  lib.rs  prelude.rs
src/client/: mod.rs  shopee.rs
src/model_translations/: mod.rs  shopee_filter_config.rs  shopee_search_result.rs
tests/: shopee.rs  shopee_filter_config.rs  shopee_search.rs  shopee_search_json.rs  shopee_single.rs
