[package]
name = "auto_requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["cookies", "gzip", "json"] }
tokio = { version = "1.24", features = ["full"] }
thiserror = "1.0.38"
async-trait = "0.1.62"
url = "2.3.1"

[dev-dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
